security/container-signing-poc/kyverno/policy/kyverno-policy-cosign.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: check-image-cosign
spec:
  validationFailureAction: Enforce
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
  - name: verify-signature-cosign
    match:
      any:
      - resources:
          kinds:
          - Pod
    verifyImages:
    - type: Cosign
      imageReferences:
      - "172.18.0.2:*/alpine*"
      attestors:
      - count: 1
        entries:
        - certificates:
            rekor:
              ignoreTlog: true
            ctlog:
              ignoreSCT: true
            cert: |-
              -----BEGIN CERTIFICATE-----
              MIIFjTCCA3WgAwIBAgIUeHtBTjMbNnQiHKLRxWgwbaVWKEAwDQYJKoZIhvcNAQEL
[...]
              CHHIN0lg33qUc0QUsj8N/OsPAHefEknnAY3UHMgJWPAf
              -----END CERTIFICATE-----
