security/container-signing-poc/kyverno/policy/kyverno-policy.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: check-image-notary
spec:
  validationFailureAction: Enforce
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
  - name: verify-signature-notary
    match:
      any:
      - resources:
          kinds:
          - Pod
    verifyImages:
    - type: Notary
      imageReferences:
      - "172.19.0.3:*/*"
      attestors:
      - count: 1
        entries:
        - certificates:
            cert: |-
              -----BEGIN CERTIFICATE-----
              MIIFTTCCAzWgAwIBAgIUaoK1qGzu3IEiYXSRWWDKC4TIBBUwDQYJKoZIhvcNAQEL
[...]
              YOSTqfr9ajXGL54v9rWfQjw=
              -----END CERTIFICATE-----
